tests-integration/fixtures/checking/1778857680_kind_polymorphic_row_synonym_tails/Main.snap
---
source: target/debug/build/tests-integration-6275ac7a2b26d932/out/checking_generated.rs
assertion_line: 28
expression: report
---
Terms
defaultOptions :: {| Optional }

Types
Optional :: forall (k :: Type). Row (k :: Type)
All :: Row Type
ConvertOptions ::
  forall (t6 :: Type) (t5 :: Type) (t4 :: Type).
    (t6 :: Type) -> (t5 :: Type) -> (t4 :: Type) -> Constraint

Synonyms
type Optional = ()
type All = ( value :: Int | Optional )

Classes
class forall (t6 :: Type) (t5 :: Type) (t4 :: Type) (defaults :: (t6 :: Type)) (provided :: (t5 :: Type)) (all :: (t4 :: Type)). ConvertOptions @(t6 :: Type) @(t5 :: Type) @(t4 :: Type)
  (defaults :: (t6 :: Type))
  (provided :: (t5 :: Type))
  (all :: (t4 :: Type))

Instances
instance forall (t7 :: Row Type).
  ConvertOptions @Type @Type @Type {| Optional } {| (t7 :: Row Type) } {| All }

Diagnostics
error[CannotUnify]: Cannot unify '()' with 'Optional'
  --> 12:18..12:20
   |
12 | defaultOptions = {}
   |                  ^~
error[CannotUnify]: Cannot unify '{}' with '{| Optional }'
  --> 12:18..12:20
   |
12 | defaultOptions = {}
   |                  ^~
